objects/Case.object
<CustomObject>
    <fields>
        <fullName>Date_Time_Assigned_to_Queue__c</fullName>
        <description>Updated via workflow rule to identify when a Case was assigned to a queue.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time Assigned to Queue</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Case_Denial_Enters_Pending__c</fullName>
        <description>Process builder stamps this field with the date/time the denial approval begins.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time Case Denial Enters Pending</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Case_Denial_Review_Completed__c</fullName>
        <description>Process stamps the date/time a case has finished the denial review process</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time Case Denial Review Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Case_Status_Reviewed__c</fullName>
        <description>Captures the Date/Time a Case Status is set to &quot;Reviewed&quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time Case Status Reviewed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Case_Status_Under_Review__c</fullName>
        <description>Captures the Date/Time the case status is changed to &quot;Under Review&quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time Case Status Under Review</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Finalized__c</fullName>
        <description>Date &amp; time the transportation case is moved to the finalized status  -this field is populated via record triggered flow &quot;Date time finalized&quot;</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The most recent date &amp; time the case was finalized.</inlineHelpText>
        <label>Date Time Finalized</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Last_Email_Sent__c</fullName>
        <description>Captures the Date/Time the last email related to this case was sent</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time Last Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Removed_from_Queue__c</fullName>
        <description>Updated via workflow rule that identifies when a Case has been removed from a queue.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time Removed from Queue</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Title_Clerked__c</fullName>
        <description>Captures the Date/Time a title is clerked AKA moved to the status of working</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Captures the Date/Time a title is clerked AKA moved to the status of working</inlineHelpText>
        <label>Date Time Title Clerked</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Title_Received__c</fullName>
        <description>Flow used to populate the date time the title case was marked as received</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Time Title Received</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Working__c</fullName>
        <description>Date time the Standard case is marked as working  - created using workflow rule</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time Working</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_of_48_Hour_Notice__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date/Time of 48 Hour Notice</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Transporter_Charged__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Transporter Charged</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Transporter_Paid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Transporter Paid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Unwind_Approved__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Automatically timestamped when Status = Unwound</inlineHelpText>
        <label>Date Unwind Approved</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_of_NSF_Demand__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of NSF Demand</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Day_Of_Week_Created__c</fullName>
        <formula>CASE( MOD( DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7), 0, &quot;Sunday&quot;, 1, &quot;Monday&quot;, 2, &quot;Tuesday&quot;, 3, &quot;Wednesday&quot;, 4, &quot;Thursday&quot;, 5, &quot;Friday&quot;, 6, &quot;Saturday&quot;,&quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day Of Week Created</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Between_Release_Slip_to_Delivery__c</fullName>
        <description>Field added for Transportation Cases for reporting purposes. The value of this field is track how many days it there was between the Release Slip date to the Actual Vehicle Delivery Date. (Date_Delivered_Actual__c)</description>
        <formula>Date_Delivered_Actual__c - DATEVALUE(Release_Datetime__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Between Release Slip to Delivery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_From_Posted_to_Picked_Up__c</fullName>
        <formula>Date_Picked_Up__c-Date_First_Posted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Posted to Picked-Up</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_From_Request_to_Pickup__c</fullName>
        <formula>Date_Picked_Up__c-DATEVALUE(CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Request to Pickup</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Since_First_Post__c</fullName>
        <formula>TODAY()-Date_First_Posted__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Since First Post</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Arb_Created_to_Release__c</fullName>
        <description>Number of days from the Arb case creation to the date the release slip is generated - Added to use in Past Arb Timeframe alert field during COVID changes on when the release slip will be given.</description>
        <formula>CreatedDate - Release_Datetime__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Arb Created to Release</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_from_Pickup_to_Delivery__c</fullName>
        <formula>Date_Delivered__c-Date_Picked_Up__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days from Pickup to Delivery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dealer_Arranged__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field on unwinds cases to determine if the unwind transportation was arranged by dealer</description>
        <label>Dealer Arranged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Doc_Hold__c</fullName>
        <description>Tells titles if a title hold has been placed on this account</description>
        <formula>IF( AND(Account.Doc_Title_Hold__c = true, Auction_Number__r.payment_method__c  = &quot;ach&quot;||  Auction_Number__r.payment_method__c  = &quot;check&quot;, ISPICKVAL (Account.Dealer_Doc_Compliance__c, &quot;Out of Compliance&quot;)||ISPICKVAL (Account.Dealer_Doc_Compliance__c,&quot;Deactivate in tools&quot;)), True, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Doc Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Phone_main__c</fullName>
        <formula>Account.Dealer_Phone__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Phone (main)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Type_from_Account__c</fullName>
        <description>Dealer type from the account brought down to the case level for reporting with invoices</description>
        <formula>TEXT(Account.Dealer_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>1=Franchise, 2=Ind, 3=Wholesaler, 4=ACV Cert Ind, 5=Commercial</inlineHelpText>
        <label>Buyer Dealer Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Delivery_Address_Line2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Delivery_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Delivery_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Delivery_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Country</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Delivery_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Delivery_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Pickup_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pickup City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Pickup_Country__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pickup Country</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Pickup_Postal_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pickup Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Pickup_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Pickup State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivered_to_Case_Created__c</fullName>
        <description>Calculates the days between ACV Transport delivery and Arbitration claim submission date - helps to calculate the Arb Timeframe Alert Field</description>
        <formula>DATEVALUE(CreatedDate)- Delivery_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delivered to Case Created</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Address_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Address</label>
        <referenceTo>Transportation_Address__c</referenceTo>
        <relationshipLabel>Cases (Delivery Address)</relationshipLabel>
        <relationshipName>DeliveryCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Address_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Delivery Address Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <description>This is pulling the transportation case actual date delivered from the related auction and posting it on the arbitration case.</description>
        <formula>Auction_Number__r.Transportation_Date_Delivered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Forecasted/estimated delivery date - may not be true date of delivery.</inlineHelpText>
        <label>Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_Delayed__c</fullName>
        <label>Delivery Delayed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Denial_Status__c</fullName>
        <description>This field tracks the denial status used in the Arbitration Denial Approval Process</description>
        <label>Denial Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Denial Pending</fullName>
                </value>
                <value>
                    <fullName>Denial Approved</fullName>
                    <label>ARB to Handle</label>
                </value>
                <value>
                    <fullName>Denial Rejected</fullName>
                    <label>IST to Handle</label>
                </value>
                <value>
                    <fullName>Denial Recalled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>Details section meant to hold the reason for why user selected &quot;Other&quot; under Titles Problems</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Digital_Title_Problem_Reason__c</fullName>
        <description>Description of the problem that occurred while trying to process a digital title.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Digital Title Problem Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Digital_Title_Problem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if there was a problem processing a digital title</description>
        <label>Digital Title Problem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Digital_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dispatch_Comment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dispatch Comment (Carrier to ACV)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Documentation_Case_Closed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Documentation Case Closed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Dry_Run_Fee__c</fullName>
        <description>This is the fee paid to the transporter for the Dry Run</description>
        <inlineHelpText>This is the fee paid to the transporter for the Dry Run - Must be filled in when Status is Closed Dry Run</inlineHelpText>
        <label>Dry Run Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dry_Run_invoice_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates that we have received an invoice from a transporter for a dry run.</description>
        <label>Dry-Run Invoice Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EP_Label_Generated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User who generated the EasyPost Label</description>
        <label>EasyPost Label Generated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ETA_to_Obtain_Title__c</fullName>
        <description>ETA to obtain the title from the Sellers Title Clerk</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>ETA to obtain the title from the Sellers Title Clerk</inlineHelpText>
        <label>Title ETA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EasyPost_Rate_ID__c</fullName>
        <description>The rate id generated by easypost when creating a postage label</description>
        <encryptionScheme>None</encryptionScheme>
        <label>EasyPost Rate Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EasyPost_Shipment_Id__c</fullName>
        <description>The shipment id provided by easypost when creating a postage label</description>
        <encryptionScheme>None</encryptionScheme>
        <label>EasyPost Shipment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EasyPost_Shipping_Service__c</fullName>
        <defaultValue>&apos;STANDARD_OVERNIGHT&apos;</defaultValue>
        <description>The easypost shipping service value used to select the rate when buying a shipment for the easypost integration. Defaults to STANDARD_OVERNIGHT. Additional Values can be found in the EasyPost API documentation under Shipments&gt;Rates&gt;Service Levels&gt;Fed Ex. https://www.easypost.com/docs/api#rates</description>
        <label>EasyPost Shipping Service</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>STANDARD_OVERNIGHT</fullName>
                </value>
                <value>
                    <fullName>CHEAPEST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Easypost_Parcel_Predefined_Package__c</fullName>
        <defaultValue>&apos;FedExEnvelope&apos;</defaultValue>
        <description>Predefined package type for easypost integration</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Easypost Parcel Predefined Package</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Easypost_Parcel_Weight__c</fullName>
        <defaultValue>10</defaultValue>
        <description>parcel weight for easypost packages</description>
        <label>Easypost Parcel Weight</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Easypost_PostageLabel_Label_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Postage Label URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Easypost_Tracker_URL__c</fullName>
        <description>URL for tracking easypost packages from ACV to Buyer</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Title URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Easypost_Tracker__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Tracking Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Problem_Subset__c</fullName>
        <formula>IF(INCLUDES( Title_Problem_Subset__c , &quot;A&quot;), &quot;Address - Write over&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;B&quot;), &quot;Branded on the Front of Title - Odom Discr.&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;D&quot;), &quot;Date - Write over&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;E&quot;), &quot;Dated Incorrectly on Reassignment&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;F&quot;), &quot;Incorrect Address - Wrong Purchaser&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;G&quot;), &quot;Incorrect Name - Wrong Purchaser&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;H&quot;), &quot;Mileage - Write over&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;I&quot;), &quot;Name - Write over&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;J&quot;), &quot;Reassignment not Included&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;K&quot;), &quot;Original Owner Missing Signature&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;L&quot;), &quot;Reassigned to ACV - Wrong Purchaser&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;N&quot;), &quot;Separate Reassignment Odom Discr.&quot; + BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;O&quot;), &quot;VIN - Incorrect on Title&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;P&quot;), &quot;Written Odom Discr.&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;Q&quot;), &quot;VIN Incorrect on Reassignment&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;R&quot;), &quot;Year, Make, or Model Incorrect on Title&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;S&quot;), &quot;Year, Make, or Model Incorrect on Reassignment&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;T&quot;), &quot;Missing Notary&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;U&quot;), &quot;Missing Lien Release&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;V&quot;), &quot;Damaged Title&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;W&quot;), &quot;Undisclosed Repossession Paperwork&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;Dealer Stamp Used Instead of Notary&quot;), &quot;Dealer Stamp Used Instead of Notary&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;Missing Owner POA&quot;), &quot;Missing Owner POA&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;Missing One and the Same&quot;), &quot;Missing One and the Same&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;Missing Death / Marriage / Divorce Certificate&quot;), &quot;Missing Death / Marriage / Divorce Certificate&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;Undisclosed application for title&quot;), &quot;Undisclosed application for title&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;Undisclosed Non-Titled Vehicle&quot;), &quot;Undisclosed Non-Titled Vehicle&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;More Recently Issued Title&quot;), &quot;More Recently Issued Title&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;Buyer Requested Duplicate - Buyer at Fault&quot;), &quot;Buyer Requested Duplicate - Buyer at Fault&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;Buyer Requested Duplicate - ACV at Fault&quot;), &quot;Buyer Requested Duplicate - ACV at Fault&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;Seller Missing Signature &amp; Missing ACV POA&quot;), &quot;Seller Missing Signature &amp; Missing ACV POA&quot;+ BR(), NULL)+
IF(INCLUDES( Title_Problem_Subset__c , &quot;Incorrect Address on Reassignment&quot;), &quot;Incorrect Address on Reassignment&quot;+ BR(), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Problem Subset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Sent_After_Case_Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent After Case Closed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Sent_By__c</fullName>
        <description>Created as part of CAP-465.  Updated by Workflow Rule</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Sent By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Sent_Date__c</fullName>
        <description>Created as part of CAP-465 - Updated by Workflow</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>End_Date_to_Received__c</fullName>
        <formula>IF(AND((5 - (CASE(MOD( 	DATEVALUE(Auction_End__c) - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) &lt; (CASE(MOD(  Title_Received_Date__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ), 
((( Title_Received_Date__c  -   	DATEVALUE(Auction_End__c) ) + 1) &lt; 7)), 
((CASE(MOD(  Title_Received_Date__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) - (5 - (CASE(MOD(  	DATEVALUE(Auction_End__c)  - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)))),
(((FLOOR((( Title_Received_Date__c  -  	DATEVALUE(Auction_End__c) ) - (CASE(MOD(  Title_Received_Date__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) / 7)) * 5) +
(CASE(MOD(  Title_Received_Date__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) + 
(CASE(MOD(  Title_Received_Date__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field calculates business days (M-F)</inlineHelpText>
        <label>Auction End to Title Received (BD)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalation_Date_Time__c</fullName>
        <description>Updated via workflow to record the date that either IsEscalated OR Manually_Escalated__c is set to true.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Escalation Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Escalation_Reason__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please enter the reason for escalating this case (limit 255 characters).</inlineHelpText>
        <label>Escalation Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimation_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Estimation Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery__c</fullName>
        <description>Date vehicle is expected to be delivered to buyer address by carrier</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Pick_Up__c</fullName>
        <description>Date and time vehicle is expected to be picked up from seller by carrier</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Expected Pick Up</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Explanation_of_other_Vehicle_Location__c</fullName>
        <description>Field to explain other vehicle location, must be filled out when selecting &quot;Other&quot; on vehicle location</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Explanation of other Vehicle Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Fastlane__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is checked based on the fastlane field on the associated resolution. If yes, checkbox is set to true</description>
        <inlineHelpText>Check this box when case considered a &quot;Fastlane&quot;</inlineHelpText>
        <label>Fastlane</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>First_Arbitration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is checked if this arbitration case is the first such case related to the associated dealer.</description>
        <inlineHelpText>This is checked automatically if this arbitration case is the first such case related to the associated dealer.</inlineHelpText>
        <label>First Arbitration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Floor_Price__c</fullName>
        <description>Field on unwind case layout to set a floor price</description>
        <label>Floor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Front_Line_Vehicle__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Front_Line_Vehicle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Go_Green_Seller__c</fullName>
        <formula>Seller_Dealership__r.Go_Green_Seller__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Go-Green Seller</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goodwill_Amount__c</fullName>
        <label>Goodwill Amount</label>
        <summarizedField>Resolution__c.Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Resolution__c.Goodwill__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Resolution__c.Case__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Historical_Close__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If field is checked then this Title Case has been historically closed</description>
        <label>Historical Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_For_Payment__c</fullName>
        <description>Developed as part of the Digital Titles process in response to COVID19 State Closures</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Hold For Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IST_Account_Owner_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For use in the arbitration approval process</description>
        <label>IST Account Owner Lookup</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IST_Follow_Up_DateTime__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IST Follow Up DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IST_Last_Call_Date__c</fullName>
        <description>The date of the last Log a Call on the Support Case</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Automatically set by Log a Call entries on this Support Case, reflecting last saved record.</inlineHelpText>
        <label>IST Last Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IST_Rep_Account_Manager__c</fullName>
        <description>Seller IST Account Owner from Account</description>
        <formula>Seller_Dealership__r.IST_Account_Owner__r.Full_Name__c</formula>
        <inlineHelpText>Seller IST Account Owner from Account</inlineHelpText>
        <label>Seller IST Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Location__c</fullName>
        <description>Location of Title Image</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Image Location</label>
        <length>1028</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incorrect_Vehicle_Information_on_Title__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Part of the Titles Problem set.</description>
        <inlineHelpText>Available options include: VIN and Year, Make, Model</inlineHelpText>
        <label>Incorrect Vehicle Information on Title</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inop__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inop</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inspection_Completion_Date__c</fullName>
        <description>Field for inspection completion date on unwind records</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Inspection Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Request_Date__c</fullName>
        <description>Field for inspection request date on unwind record case</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Inspection Request Date</label>
        <type>Date</type>
    </fields>
</CustomObject>